test/types/tuple/errors/tuple-assignment-1.chpl
// from #9982

proc main() {
  const x = 12;
  (x,) = (x + 1,); // x += 1;
  writeln(x);
}
