test/types/tuple/errors/tuple-assignment-1.good
tuple-assignment-1.chpl:3: In function 'main':
tuple-assignment-1.chpl:5: error: cannot assign to const variable
